# alfred-platform

./: .env.example  .gitignore  AI_Steward_Unified_Architecture.md  Makefile  README.md  deploy.sh  docker-compose.yml  setup-local.sh  setup-ubuntu.sh  start.sh  status.md  status.sh  stop.sh
bridge/: .env.example  Dockerfile  package-lock.json  package.json
config/: services.yaml
doc/: Alfred_Architecture_v1.1.md  (+10 more)
services/gateway/: Dockerfile  pyproject.toml
services/gateway/alfred_gateway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/gateway/app/: main.py
services/gateway/app/api/: account_routes.py  routes.py  webhooks.py
services/gateway/app/core/: config.py  logging.py  security.py
services/gateway/app/db/: seed.py  session.py
services/gateway/app/models/: account.py  auth.py  chat.py
services/gateway/app/repositories/: account_repository.py  auth_repository.py  chat_repository.py  connection_repository.py
services/gateway/app/schemas/: account.py  auth.py  bridge.py  chat.py  connection.py
services/gateway/app/services/: account_bot_service.py  auth_service.py  bridge_service.py  chat_service.py  dispatch_service.py  intent_service.py  media_service.py  onboarding_service.py  pending_sessions.py  service_registry.py  stt_service.py  tts_service.py  whatsapp_service.py
services/gateway/tests/: test_intent_service.py  test_pending_sessions.py  test_push_bootstrap.py  test_settings_account_routes.py
shared/: auth.py  config.py  pyproject.toml
shared/alfred_shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+108 files in other folders)
